--- a/dask/environment.yml
+++ b/dask/environment.yml
@@ -26,6 +26,7 @@ dependencies:
   - graphviz
   - pip
   - fastparquet
+  - pyarrow
   - dask-ml
   - pip:
     - graphviz 
@@ -33,5 +34,3 @@ dependencies:
     - azureml-sdk[notebooks]
     - azureml-opendatasets
     - mpi4py
-    - gym
-    - adlfs
